[gd_scene load_steps=5 format=3 uid="uid://ctluay8kkm6b8"]

[ext_resource type="Script" uid="uid://d2m0hkeep073t" path="res://node_tree.gd" id="2_112p8"]
[ext_resource type="Script" uid="uid://cn4fi27bjgvjq" path="res://node_tree_item.gd" id="3_112p8"]

[sub_resource type="Gradient" id="Gradient_e2u21"]

[sub_resource type="Curve2D" id="Curve2D_nxiqb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 155, 45, 21, -109, -21, 109, 281, 128, 0, 0, 0, 0, 486, 270, 0, 0, 0, 0, 669, 335)
}
point_count = 4

[node name="Node" type="Node"]

[node name="Line2D" type="Line2D" parent="."]
visible = false
position = Vector2(237, -27)
points = PackedVector2Array(37, 29, 323, 91, 276, 286)
gradient = SubResource("Gradient_e2u21")

[node name="Path2D" type="Path2D" parent="."]
visible = false
position = Vector2(237, -27)
curve = SubResource("Curve2D_nxiqb")

[node name="NodeTree" type="Node2D" parent="."]
script = ExtResource("2_112p8")

[node name="NodeTreeItem" type="Node2D" parent="NodeTree"]
position = Vector2(184, 48)
script = ExtResource("3_112p8")
outputs = [1, 2, 3]
metadata/_custom_type_script = "uid://cn4fi27bjgvjq"

[node name="NodeTreeItem2" type="Node2D" parent="NodeTree"]
position = Vector2(256, 312)
script = ExtResource("3_112p8")
metadata/_custom_type_script = "uid://cn4fi27bjgvjq"

[node name="NodeTreeItem3" type="Node2D" parent="NodeTree"]
position = Vector2(552, 96)
script = ExtResource("3_112p8")
outputs = [3]
metadata/_custom_type_script = "uid://cn4fi27bjgvjq"

[node name="NodeTreeItem4" type="Node2D" parent="NodeTree"]
position = Vector2(680, 304)
script = ExtResource("3_112p8")
metadata/_custom_type_script = "uid://cn4fi27bjgvjq"

[connection signal="child_entered_tree" from="NodeTree" to="NodeTree" method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="NodeTree" to="NodeTree" method="_on_child_exiting_tree"]
